[gd_scene load_steps=5 format=3 uid="uid://b21bh1sh66gbd"]

[ext_resource type="Script" path="res://scences/ui/stats_ui.gd" id="1_vpltm"]
[ext_resource type="Texture2D" uid="uid://oe7v35ii8vrs" path="res://assets/art/tile_0102.png" id="2_rgk6s"]
[ext_resource type="Theme" uid="uid://bhs76hnulf3s4" path="res://assets/main_theme.tres" id="3_g2v77"]
[ext_resource type="Texture2D" uid="uid://clyr2ry2xry0f" path="res://assets/art/heart_2.png" id="4_o0sbk"]

[node name="StatsUI" type="HBoxContainer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.0
offset_right = 45.0
offset_bottom = 16.0
grow_horizontal = 2
alignment = 1
script = ExtResource("1_vpltm")

[node name="Barrier" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="BarrierImage" type="TextureRect" parent="Barrier"]
layout_mode = 2
texture = ExtResource("2_rgk6s")
stretch_mode = 5

[node name="BarrierLabel" type="Label" parent="Barrier"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_g2v77")
text = "6"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Health" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 2

[node name="HealthImage" type="TextureRect" parent="Health"]
layout_mode = 2
texture = ExtResource("4_o0sbk")
stretch_mode = 5

[node name="HealthLabel" type="Label" parent="Health"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("3_g2v77")
text = "4"
horizontal_alignment = 1
vertical_alignment = 1
